--- a/pqDSMViewerPanel_testing.ui
+++ b/pqDSMViewerPanel_testing.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>412</width>
-    <height>551</height>
+    <width>463</width>
+    <height>639</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>394</width>
-         <height>508</height>
+         <width>445</width>
+         <height>596</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -53,7 +53,49 @@
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <layout class="QGridLayout" name="gridLayout">
-             <item row="7" column="0" colspan="3">
+             <item row="14" column="0">
+              <widget class="QPushButton" name="createDSM">
+               <property name="text">
+                <string>CreateDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="14" column="1">
+              <widget class="QPushButton" name="destroyDSM">
+               <property name="text">
+                <string>DestroyDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="14" column="2">
+              <widget class="QPushButton" name="clearDSM">
+               <property name="text">
+                <string>ClearDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="15" column="0">
+              <widget class="QPushButton" name="h5Dump">
+               <property name="text">
+                <string>H5Dump</string>
+               </property>
+              </widget>
+             </item>
+             <item row="15" column="1">
+              <widget class="QPushButton" name="testDSM">
+               <property name="text">
+                <string>TestDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="15" column="2">
+              <widget class="QPushButton" name="displayDSM">
+               <property name="text">
+                <string>DisplayDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="0">
               <widget class="QPushButton" name="unpublishDSM">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -62,11 +104,11 @@
                 </sizepolicy>
                </property>
                <property name="text">
-                <string>Disable DSM data routing</string>
+                <string>UnpublishDSM</string>
                </property>
               </widget>
              </item>
-             <item row="6" column="0" colspan="3">
+             <item row="5" column="0">
               <widget class="QPushButton" name="publishDSM">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -75,14 +117,44 @@
                 </sizepolicy>
                </property>
                <property name="text">
-                <string>Enable DSM data routing</string>
+                <string>PublishDSM</string>
                </property>
               </widget>
              </item>
-             <item row="5" column="1" colspan="2">
+             <item row="13" column="0" colspan="3">
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item row="5" column="2">
+              <widget class="QPushButton" name="connectDSM">
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
+               </property>
+               <property name="text">
+                <string>ConnectDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="2">
+              <widget class="QPushButton" name="disconnectDSM">
+               <property name="text">
+                <string>DisconnectDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="2">
               <widget class="QComboBox" name="xdmfCommTypeComboBox">
                <property name="currentIndex">
-                <number>0</number>
+                <number>1</number>
                </property>
                <item>
                 <property name="text">
@@ -96,7 +168,7 @@
                </item>
               </widget>
              </item>
-             <item row="3" column="1" colspan="2">
+             <item row="2" column="2">
               <widget class="QSpinBox" name="xdmfCommPort">
                <property name="maximum">
                 <number>65535</number>
@@ -109,59 +181,14 @@
                </property>
               </widget>
              </item>
-             <item row="5" column="0">
+             <item row="4" column="0" colspan="2">
               <widget class="QLabel" name="xdmfCommTypeLabel">
                <property name="text">
-                <string>Inter-Communicator</string>
-               </property>
-              </widget>
-             </item>
-             <item row="11" column="0" colspan="3">
-              <widget class="QCheckBox" name="storeDSMContents">
-               <property name="text">
-                <string>Store Time Step</string>
-               </property>
-              </widget>
-             </item>
-             <item row="4" column="0">
-              <widget class="QLabel" name="dsmSizeLabel">
-               <property name="text">
-                <string>Buffer Size/Node (in MB)</string>
-               </property>
-              </widget>
-             </item>
-             <item row="4" column="1" colspan="2">
-              <widget class="QSpinBox" name="dsmSizeSpinBox">
-               <property name="maximum">
-                <number>65535</number>
-               </property>
-               <property name="value">
-                <number>128</number>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="dsmConfigFileLabel">
-               <property name="text">
-                <string>Configuration file path</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1" colspan="2">
-              <widget class="QLineEdit" name="dsmConfigFilePathLineEdit">
-               <property name="text">
-                <string/>
+                <string>DSM InterCommunication</string>
                </property>
               </widget>
              </item>
              <item row="2" column="0">
-              <widget class="QLabel" name="dsmServerNameLabel">
-               <property name="text">
-                <string>Host (name/IP address)</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="1">
               <widget class="QComboBox" name="dsmServerName">
                <property name="currentIndex">
                 <number>0</number>
@@ -198,7 +225,31 @@
                </item>
               </widget>
              </item>
-             <item row="2" column="2">
+             <item row="0" column="0">
+              <widget class="QRadioButton" name="dsmIsStandalone">
+               <property name="text">
+                <string>Standalone</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QRadioButton" name="dsmIsServer">
+               <property name="text">
+                <string>Server</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
+              <widget class="QRadioButton" name="dsmIsClient">
+               <property name="text">
+                <string>Client</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
               <widget class="QToolButton" name="addServerDSM">
                <property name="enabled">
                 <bool>true</bool>
@@ -212,20 +263,58 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="xdmfCommPortLabel">
+             <item row="9" column="0" colspan="3">
+              <widget class="QCheckBox" name="storeDSMContents">
                <property name="text">
-                <string>Port number</string>
+                <string>Store DSM contents</string>
+               </property>
+              </widget>
+             </item>
+             <item row="11" column="0" colspan="3">
+              <widget class="QCheckBox" name="autoDisplayDSM">
+               <property name="text">
+                <string>Display DSM content automatically</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
              <item row="10" column="0" colspan="3">
-              <widget class="QCheckBox" name="autoDisplayDSM">
+              <widget class="QCheckBox" name="forceXdmfGeneration">
                <property name="text">
-                <string>Display content automatically</string>
+                <string>Force XDMF generation</string>
                </property>
-               <property name="checked">
-                <bool>true</bool>
+              </widget>
+             </item>
+             <item row="3" column="0" colspan="2">
+              <widget class="QLabel" name="dsmSizeLabel">
+               <property name="text">
+                <string>DSM Local Buffer Size (in MB)</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="2">
+              <widget class="QSpinBox" name="dsmSizeSpinBox">
+               <property name="maximum">
+                <number>65535</number>
+               </property>
+               <property name="value">
+                <number>128</number>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="1" colspan="2">
+              <widget class="QLineEdit" name="dsmConfigFilePathLineEdit">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="0">
+              <widget class="QLabel" name="dsmConfigFileLabel">
+               <property name="text">
+                <string>DSM configuration file path</string>
                </property>
               </widget>
              </item>
@@ -233,6 +322,9 @@
            </item>
           </layout>
          </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="infoTextOutput"/>
         </item>
         <item>
          <widget class="QFrame" name="frame">
@@ -254,45 +346,38 @@
              <property name="fieldGrowthPolicy">
               <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
              </property>
-             <item row="0" column="0">
-              <widget class="QLabel" name="xdmfFileTypeLabel">
-               <property name="text">
-                <string>Description File Format</string>
-               </property>
-              </widget>
-             </item>
              <item row="1" column="0">
               <widget class="QLabel" name="xdmfFilePathLabel">
                <property name="text">
-                <string>Description File Path</string>
+                <string>XDMF file path</string>
                </property>
               </widget>
              </item>
              <item row="1" column="1">
               <widget class="QLineEdit" name="xdmfFilePathLineEdit"/>
              </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="xdmfFileTypeLabel">
+               <property name="text">
+                <string>XDMF file type</string>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="1">
               <widget class="QComboBox" name="xdmfFileTypeComboBox">
                <item>
                 <property name="text">
-                 <string>XDMF format</string>
+                 <string>Full description</string>
                 </property>
                </item>
                <item>
                 <property name="text">
-                 <string>XDMF template format</string>
+                 <string>Pseudo description</string>
                 </property>
                </item>
               </widget>
              </item>
-             <item row="3" column="0" colspan="2">
-              <widget class="QCheckBox" name="forceXdmfGeneration">
-               <property name="text">
-                <string>Force XDMF generation</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="0" colspan="2">
+             <item row="2" column="1">
               <widget class="QPushButton" name="browseFile">
                <property name="text">
                 <string>Browse...</string>
@@ -300,9 +385,6 @@
               </widget>
              </item>
             </layout>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="infoTextOutput"/>
            </item>
           </layout>
          </widget>
