--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -107,13 +107,6 @@
                </property>
               </widget>
              </item>
-             <item row="10" column="0" colspan="3">
-              <widget class="QCheckBox" name="storeDSMContents">
-               <property name="text">
-                <string>Store Time Step</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="0">
               <widget class="QLabel" name="dsmSizeLabel">
                <property name="text">
@@ -196,13 +189,27 @@
                </property>
               </widget>
              </item>
-             <item row="9" column="0" colspan="3">
+             <item row="7" column="1" colspan="2">
+              <widget class="QCheckBox" name="dsmWriteDisk">
+               <property name="text">
+                <string>Write to Disk</string>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="0">
               <widget class="QCheckBox" name="autoDisplayDSM">
                <property name="text">
-                <string>Display content automatically</string>
+                <string>Display Data</string>
                </property>
                <property name="checked">
                 <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="0" colspan="3">
+              <widget class="QCheckBox" name="storeDSMContents">
+               <property name="text">
+                <string>Store Time Step</string>
                </property>
               </widget>
              </item>
