--- a/CSCS_DSMManager.qrc
+++ b/CSCS_DSMManager.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/ParaViewResources" >
     <file>CSCS_DSMManager_Client.xml</file>
+    <file>Icons/NextMuSELogo.png</file>
   </qresource>
 </RCC>
